--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar color="primary">
-  <span class="title">Jared Earl Computer Science</span>
+	<span class="extra-pad"></span>
+	<span class="title-pad"></span>
+	<span class="toolbar-font">Jared Earl</span>
+	<span class="toolbar-spacer"></span>
+	<button mat-flat-button class="toolbar-font" color="primary">Projects</button>
+	<button mat-flat-button class="toolbar-font" color="primary">About</button>
+	<span class="extra-pad"></span>
 </mat-toolbar>
