begin projects section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,5 @@
-<app-toolbar></app-toolbar>
-<app-small-bio>
+<div class="mat-app-background">
+	<app-toolbar></app-toolbar>
+	<app-small-bio></app-small-bio>
+	<app-projects></app-projects>
+</div>
