--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,11 +1,11 @@
 <div class="content">
 	<div fxLayout="row wrap" fxLayoutGap="16px grid">
-		<div fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="50%">
+		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
-				<img mat-card-img src="assets/profile_jared.jpeg">
+				<img mat-card-img src="assets/screenshot-sbolcanvas-org-canvas.png">
 			</mat-card>
 		</div>
-		<div fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="50%" style="align-self: center">
+		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
 				<h3 style="text-align: center">Software Engineer. Lifelong Student. Team Player.</h3>
 			</mat-card>
