build out sbol canvas project card some more

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,7 +2,17 @@
 	<div fxLayout="row wrap" fxLayoutGap="16px grid">
 		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
+				<mat-card-header>
+				<img mat-card-avatar src="assets/logo-alternative-u.png" style="background-size: cover;">
+				<mat-card-title>SBOL Canvas</mat-card-title>
+    			<mat-card-subtitle>sbolcanvas.org</mat-card-subtitle>
+    			</mat-card-header>
 				<img mat-card-img src="assets/screenshot-sbolcanvas-org-canvas.png">
+				<mat-card-content>
+					<p>
+						With the guidance of Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built out the worlds first web based synthetic biology aided design program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. Our project was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA), and is expected to be published in the high-impact journal ACS Synthetic Biology in 2021.
+					</p>
+				</mat-card-content>
 			</mat-card>
 		</div>
 		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
