--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,23 +1,44 @@
 <div class="content">
+	<h1 class="main-font" style="text-align: center;">Projects</h1>
 	<div fxLayout="row wrap" fxLayoutGap="16px grid">
 		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-header>
 				<img mat-card-avatar src="assets/logo-alternative-u.png" style="background-size: cover;">
 				<mat-card-title>SBOL Canvas</mat-card-title>
-    			<mat-card-subtitle>sbolcanvas.org</mat-card-subtitle>
+    			<mat-card-subtitle>Web-based Synthetic Biology CAD</mat-card-subtitle>
     			</mat-card-header>
 				<img mat-card-img src="assets/screenshot-sbolcanvas-org-canvas.png">
 				<mat-card-content>
 					<p>
-						With the guidance of Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built out the worlds first web based synthetic biology aided design program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. Our project was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA), and is expected to be published in the high-impact journal ACS Synthetic Biology in 2021.
+						<br>
+						With guidance from Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built out the worlds first web-based synthetic biology design program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. Our project was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA), and is expected to be published in the high-impact journal ACS Synthetic Biology in 2021.
 					</p>
 				</mat-card-content>
+				<mat-card-actions>
+				<button mat-button href="https://github.com/SynBioDex/SBOLCanvas">APP</button>
+				<button mat-button href="https://www.iwbdaconf.org/2020/">IWBDA</button>
+				<button mat-button href="https://github.com/SynBioDex/SBOLCanvas">GITHUB</button>
+				</mat-card-actions>
 			</mat-card>
 		</div>
 		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
-				<h3 style="text-align: center">Software Engineer. Lifelong Student. Team Player.</h3>
+				<mat-card-header>
+				<img mat-card-avatar src="assets/logo-alternative-u.png" style="background-size: cover;">
+				<mat-card-title>Zombie Apocalypse</mat-card-title>
+    			<mat-card-subtitle>IOS app written in Swift</mat-card-subtitle>
+    			</mat-card-header>
+				<img mat-card-img src="assets/zombie.png">
+				<mat-card-content>
+					<p>
+						<br>
+						A project I did as part of a mobile app programming class I took at the University of Utah. I had a lot of fun writing this... Apparently 30% more fun than the rest of the class.
+					</p>
+				</mat-card-content>
+				<mat-card-actions>
+				<button mat-button href="https://github.com/jaearl/Zombie_Apocalypse">GITHUB</button>
+				</mat-card-actions>
 			</mat-card>
 		</div>
 	</div>
