switch out sbol canvas pic and make links work

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -8,7 +8,7 @@
 				<mat-card-title>SBOL Canvas</mat-card-title>
     			<mat-card-subtitle>Web-based Synthetic Biology CAD</mat-card-subtitle>
     			</mat-card-header>
-				<img mat-card-img src="assets/screenshot-sbolcanvas-org-canvas.png">
+				<img mat-card-img src="assets/sbolcanvas-pic.png">
 				<mat-card-content>
 					<p>
 						<br>
@@ -16,9 +16,9 @@
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
-				<button mat-button href="https://github.com/SynBioDex/SBOLCanvas">APP</button>
-				<button mat-button href="https://www.iwbdaconf.org/2020/">IWBDA</button>
-				<button mat-button href="https://github.com/SynBioDex/SBOLCanvas">GITHUB</button>
+				<a mat-raised-button href="https://sbolcanvas.org" target="_blank">APP</a>
+				<a mat-raised-button href="https://www.iwbdaconf.org/2020/" target="_blank">IWBDA</a>
+				<a mat-raised-button href="https://github.com/SynBioDex/SBOLCanvas" target="_blank">GITHUB</a>
 				</mat-card-actions>
 			</mat-card>
 		</div>
@@ -37,7 +37,7 @@
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
-				<button mat-button href="https://github.com/jaearl/Zombie_Apocalypse">GITHUB</button>
+				<a mat-raised-button href="https://github.com/jaearl/Zombie_Apocalypse" target="_blank">GITHUB</a>
 				</mat-card-actions>
 			</mat-card>
 		</div>
