--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,12 +1,12 @@
 <div class="content">
 	<h1 class="main-font" style="text-align: center;">Projects</h1>
 	<div fxLayout="row wrap" fxLayoutGap="16px grid">
-		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
+		<div fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-header>
 				<img mat-card-avatar src="assets/logo-alternative-u.png" style="background-size: cover;">
 				<mat-card-title>SBOL Canvas</mat-card-title>
-    			<mat-card-subtitle>Web-based Synthetic Biology CAD</mat-card-subtitle>
+    			<mat-card-subtitle>Web-based CAD for Synthetic Biology</mat-card-subtitle>
     			</mat-card-header>
 				<img mat-card-img src="assets/sbolcanvas-pic.png">
 				<mat-card-content>
@@ -22,7 +22,7 @@
 				</mat-card-actions>
 			</mat-card>
 		</div>
-		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
+		<div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-header>
 				<img mat-card-avatar src="assets/logo-alternative-u.png" style="background-size: cover;">
