--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -1,1 +1,56 @@
-<p>roles works!</p>
+<div class="content">
+	<h1 class="main-font" style="text-align: center;">Roles</h1>
+	<div fxLayout="row wrap" fxLayoutGap="16px grid">
+		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
+			<mat-card class="mat-elevation-z4">
+				<mat-card-content>
+					<h2 style="text-align: center">Software Engineer</h2>
+				</mat-card-content>
+			</mat-card>
+		</div>
+		<div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="100%">
+			<mat-card class="mat-elevation-z4">
+				<img mat-card-img src="assets/forcepoint-logo.png">
+			</mat-card>
+		</div>
+		<br>
+		<div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="100%">
+			<mat-card class="mat-elevation-z4">
+				<img mat-card-img src="assets/forcepoint-logo.png">
+			</mat-card>
+		</div>
+		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
+			<mat-card class="mat-elevation-z4">
+				<mat-card-content>
+					<h2 style="text-align: center">Professional Services</h2>
+				</mat-card-content>
+			</mat-card>
+		</div>
+		<br>
+		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
+			<mat-card class="mat-elevation-z4">
+				<mat-card-content>
+					<h2 style="text-align: center">Intern</h2>
+				</mat-card-content>
+			</mat-card>
+		</div>
+		<div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="100%">
+			<mat-card class="mat-elevation-z4">
+				<img mat-card-img src="assets/forcepoint-logo.png">
+			</mat-card>
+		</div>
+		<br>
+		<div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="100%">
+			<mat-card class="mat-elevation-z4">
+				<img mat-card-img src="assets/bluehost.png">
+			</mat-card>
+		</div>
+		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
+			<mat-card class="mat-elevation-z4">
+				<mat-card-content>
+					<h2 style="text-align: center">Technical Support</h2>
+				</mat-card-content>
+			</mat-card>
+		</div>
+	</div>
+</div>
