finally figure out how to make mat-card fill flex layout grid tile. Refine text styling

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,8 +10,8 @@
     			</mat-card-header>
 				<img mat-card-img src="assets/sbolcanvas-pic.png">
 				<mat-card-content>
-					<p>
-						<br>
+					<br>
+					<p class="description-text">
 						With guidance from Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built out the worlds first web-based synthetic biology design program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. Our project was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA), and is expected to be published in the high-impact journal ACS Synthetic Biology in 2021.
 					</p>
 				</mat-card-content>
@@ -31,7 +31,7 @@
     			</mat-card-header>
 				<img mat-card-img src="assets/zombie.png">
 				<mat-card-content>
-					<p>
+					<p class="description-text">
 						<br>
 						A project I did as part of a mobile app programming class I took at the University of Utah. I had a lot of fun writing this... Apparently 30% more fun than the rest of the class.
 					</p>
