--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -4,7 +4,7 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 style="text-align: center">Software Engineer</h2>
+					<h2 class="main-font" style="text-align: center">Software Engineer</h2>
 				</mat-card-content>
 			</mat-card>
 		</div>
@@ -22,7 +22,7 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 style="text-align: center">Professional Services</h2>
+					<h2 class="main-font" style="text-align: center">Professional Services</h2>
 				</mat-card-content>
 			</mat-card>
 		</div>
@@ -30,7 +30,7 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 style="text-align: center">Intern</h2>
+					<h2 class="main-font" style="text-align: center">Intern</h2>
 				</mat-card-content>
 			</mat-card>
 		</div>
@@ -48,7 +48,7 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 style="text-align: center">Technical Support</h2>
+					<h2 class="main-font" style="text-align: center">Technical Support</h2>
 				</mat-card-content>
 			</mat-card>
 		</div>
