--- a/src/app/roles/roles.component.scss
+++ b/src/app/roles/roles.component.scss
@@ -1,3 +1,11 @@
 .content {
    padding: 32px;
 }
+
+/* The purpose of this is to make the mat-card fill the entire flex layout grid tile. 
+   It only gets applied to the 'roles' component. */
+mat-card {
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+}
