--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,3 +56,7 @@ mat-card img{
 .main-font {
   font-family: "Lucida Console", "Courier New", monospace;
 }
+
+.description-text {
+	line-height: 1.6;
+}
