--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -1,6 +1,6 @@
-<div class="content">
+<div #roles class="content">
 	<h1 class="main-font" style="text-align: center;">Roles</h1>
-	<div fxLayout="row wrap" fxLayoutGap="16px grid">
+	<div fxLayout="row wrap" fxLayoutGap="32px grid">
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
