add roles text, make toolbar buttons scroll to components

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -16,9 +16,9 @@
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
-				<a mat-raised-button href="https://sbolcanvas.org" target="_blank">APP</a>
-				<a mat-raised-button href="https://www.iwbdaconf.org/2020/" target="_blank">IWBDA</a>
-				<a mat-raised-button href="https://github.com/SynBioDex/SBOLCanvas" target="_blank">GITHUB</a>
+				<a mat-raised-button color="accent" href="https://sbolcanvas.org" target="_blank">APP</a>
+				<a mat-raised-button color="accent" href="https://www.iwbdaconf.org/2020/" target="_blank">IWBDA</a>
+				<a mat-raised-button color="accent" href="https://github.com/SynBioDex/SBOLCanvas" target="_blank">GITHUB</a>
 				</mat-card-actions>
 			</mat-card>
 		</div>
@@ -37,7 +37,7 @@
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
-				<a mat-raised-button href="https://github.com/jaearl/Zombie_Apocalypse" target="_blank">GITHUB</a>
+				<a mat-raised-button color="accent" href="https://github.com/jaearl/Zombie_Apocalypse" target="_blank">GITHUB</a>
 				</mat-card-actions>
 			</mat-card>
 		</div>
