--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,18 @@
 <div class="mat-app-background">
-	<app-toolbar></app-toolbar>
+	<mat-toolbar color="primary">
+	<span class="extra-pad"></span>
+	<span class="title-pad"></span>
+	<span class="main-font">Jared Earl</span>
+	<span class="toolbar-spacer"></span>
+	<button mat-flat-button (click)="scroll(projects)" class="main-font" color="primary">Projects</button>
+	<button mat-flat-button (click)="scroll(roles)" class="main-font" color="primary">Roles</button>
+	<span class="extra-pad"></span>
+	</mat-toolbar>
 	<app-small-bio></app-small-bio>
-	<app-projects></app-projects>
-	<app-roles></app-roles>
+	<div #projects>
+		<app-projects></app-projects>
+	</div>
+	<div #roles>
+		<app-roles></app-roles>
+	</div>
 </div>
