--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -4,7 +4,10 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 class="main-font" style="text-align: center">Software Engineer</h2>
+					<h2 class="main-font" style="text-align: center">Software Engineer &middot; 2019 to present day</h2>
+					<h3 class="main-font" style="text-align: center">Insider Threat</h3>
+					<h4 class="main-font" style="text-align: center">Linux Kernel &middot; Cross platform &middot; Linux Endpoint Engineering</h4>
+					<p></p>
 				</mat-card-content>
 			</mat-card>
 		</div>
@@ -22,7 +25,10 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 class="main-font" style="text-align: center">Professional Services</h2>
+					<h2 class="main-font" style="text-align: center">Professional Services &middot; 1.5 years</h2>
+					<h3 class="main-font" style="text-align: center">Cross Domain Security</h3>
+					<h4 class="main-font" style="text-align: center">Socket Programming &middot; Strict Validation &middot; Automation Scripting</h4>
+					<!-- <p>First time getting paid to code. I completed small projects that secure highly sensitive data transfers using strict validation techniques</p> -->
 				</mat-card-content>
 			</mat-card>
 		</div>
@@ -30,7 +36,10 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 class="main-font" style="text-align: center">Intern</h2>
+					<h2 class="main-font" style="text-align: center">Intern &middot; 3 Months</h2>
+					<h3 class="main-font" style="text-align: center">Global Governements</h3>
+					<h4 class="main-font" style="text-align: center">Project Management Automation &middot; Web Scraping</h4>
+					<!-- <p>Assisted project management with menial tasks through automation.</p> -->
 				</mat-card-content>
 			</mat-card>
 		</div>
@@ -48,7 +57,9 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 class="main-font" style="text-align: center">Technical Support</h2>
+					<h2 class="main-font" style="text-align: center">Technical Support &middot; 1.5 years</h2>
+					<h4 class="main-font" style="text-align: center">Levels .5,I,II &middot; Web Hosting &middot; Linux Server Administration</h4>
+					<!-- <p>Manned the trenches as Support levels .5, I, and II.</p> -->
 				</mat-card-content>
 			</mat-card>
 		</div>
