Fix some typos, and change the focus of sbol canvas

--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -27,7 +27,7 @@
 				<mat-card-content>
 					<h2 class="main-font" style="text-align: center">Professional Services &middot; 1.5 years</h2>
 					<h3 class="main-font" style="text-align: center">Cross Domain Security</h3>
-					<h4 class="main-font" style="text-align: center">Socket Programming &middot; Strict Validation &middot; Automation Scripting</h4>
+					<h4 class="main-font" style="text-align: center">Socket Programming &middot; Strict Validation &middot; Linux Automation Scripting</h4>
 					<!-- <p>First time getting paid to code. I completed small projects that secure highly sensitive data transfers using strict validation techniques</p> -->
 				</mat-card-content>
 			</mat-card>
@@ -37,7 +37,7 @@
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
 					<h2 class="main-font" style="text-align: center">Intern &middot; 3 Months</h2>
-					<h3 class="main-font" style="text-align: center">Global Governements</h3>
+					<h3 class="main-font" style="text-align: center">Global Governments</h3>
 					<h4 class="main-font" style="text-align: center">Project Management Automation &middot; Web Scraping</h4>
 					<!-- <p>Assisted project management with menial tasks through automation.</p> -->
 				</mat-card-content>
