--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="content">
 	<h1 class="main-font" style="text-align: center;">Projects</h1>
 	<div fxLayout="row wrap" fxLayoutGap="16px grid">
-		<div fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="100%">
+		<div fxFlex="100%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-header>
 				<img mat-card-avatar src="assets/logo-alternative-u.png" style="background-size: cover;">
@@ -12,7 +12,7 @@
 				<mat-card-content>
 					<br>
 					<p class="description-text">
-						With guidance from Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built out the worlds first web-based synthetic biology design program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. Our project was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA), and is expected to be published in the high-impact journal ACS Synthetic Biology in 2021.
+						With guidance from Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built the worlds first web-based synthetic biology design program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. Our project was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA), and is expected to be published in the high-impact journal ACS Synthetic Biology in 2021.
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
