--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -4,9 +4,9 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 class="main-font" style="text-align: center">Software Engineer &middot; 2019 to present day</h2>
+					<h2 class="main-font" style="text-align: center">Software Engineer &middot; 2019 - Present</h2>
 					<h3 class="main-font" style="text-align: center">Insider Threat</h3>
-					<h4 class="main-font" style="text-align: center">Linux Kernel &middot; Cross platform &middot; Linux Endpoint Engineering</h4>
+					<h4 class="main-font" style="text-align: center">Linux Endpoint Engineering &middot; Cross Platform &middot; Linux Kernel</h4>
 					<p></p>
 				</mat-card-content>
 			</mat-card>
@@ -25,9 +25,9 @@
 		<div fxFlex="75%" fxFlex.xs="100%" fxFlex.sm="100%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
-					<h2 class="main-font" style="text-align: center">Professional Services &middot; 1.5 years</h2>
+					<h2 class="main-font" style="text-align: center">Professional Services &middot; 1.5 Years</h2>
 					<h3 class="main-font" style="text-align: center">Cross Domain Security</h3>
-					<h4 class="main-font" style="text-align: center">Socket Programming &middot; Strict Validation &middot; Linux Automation Scripting</h4>
+					<h4 class="main-font" style="text-align: center">Transpiler &middot; Socket Programming &middot; Linux Automation Scripting</h4>
 					<!-- <p>First time getting paid to code. I completed small projects that secure highly sensitive data transfers using strict validation techniques</p> -->
 				</mat-card-content>
 			</mat-card>
