--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -12,7 +12,7 @@
 				<mat-card-content>
 					<br>
 					<p class="description-text">
-						With guidance from Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built the worlds first web-based synthetic biology design program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. Our project was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA), and is expected to be published in the high-impact journal ACS Synthetic Biology in 2021.
+						With guidance from Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built the worlds first open source web-based synthetic biology CAD program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. SBOL Canvas was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA) in 2020, and is expected to be published in the high-impact journal ACS Synthetic Biology in 2021.
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
@@ -22,7 +22,7 @@
 				</mat-card-actions>
 			</mat-card>
 		</div>
-		<div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%">
+		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-header>
 				<img mat-card-avatar src="assets/logo-alternative-u.png" style="background-size: cover;">
