--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -5,8 +5,8 @@
 			<mat-card class="mat-elevation-z4">
 				<mat-card-content>
 					<h2 class="main-font" style="text-align: center">Software Engineer &middot; 2019 - Present</h2>
-					<h3 class="main-font" style="text-align: center">Insider Threat</h3>
-					<h4 class="main-font" style="text-align: center">Linux Endpoint Engineering &middot; Cross Platform &middot; Linux Kernel</h4>
+					<h3 class="main-font" style="text-align: center">User Activity Monitoring</h3>
+					<h4 class="main-font" style="text-align: center">Linux Endpoint Engineering (c/c++) &middot; Cross Platform &middot; Linux Driver Maintenance</h4>
 					<p></p>
 				</mat-card-content>
 			</mat-card>
@@ -64,4 +64,6 @@
 			</mat-card>
 		</div>
 	</div>
+	<br>
+	<br>
 </div>
