Add simple footer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,5 +28,7 @@
 <div #roles class="mat-app-background">
 	<app-roles></app-roles>
 </div>
-<!-- </div> -->
-<!-- <div id="first-par-image"></div> -->
+
+<div class="mat-app-background">
+	<app-footer></app-footer>
+</div>
