Add riskay project I had fun with, Rearrage roles to the middle

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,19 +17,19 @@
 	background-attachment: fixed;
 }
 
-#first-parallax {
+#me-parallax {
 	background-image: url("/assets/collage6.png");
 	height: 100%;
 	width: 100%;
 }
 
-#second-parallax {
+#fun-things-parallax {
 	background-image: url("/assets/collage7.png");
 	height: 80%;
 	width: 100%;
 }
 
-#third-parallax {
+#professional-parallax {
 	background-image: url("/assets/collage8.png");
 	height: 80%;
 	width: 100%;
