--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -22,6 +22,25 @@
 				</mat-card-actions>
 			</mat-card>
 		</div>
+		<div fxFlex="66%" fxFlex.xs="100%" fxFlex.sm="50%">
+			<mat-card class="mat-elevation-z4">
+				<mat-card-header>
+				<img mat-card-avatar src="assets/angular-icon.png" style="background-size: cover;">
+				<mat-card-title>This Website!</mat-card-title>
+    			<mat-card-subtitle>Personal website using the Angular framework, and hosted on a Raspberry Pi 3</mat-card-subtitle>
+    			</mat-card-header>
+				<img mat-card-img src="assets/raspberrypi3.jpeg">
+				<mat-card-content>
+					<p class="description-text">
+						<br>
+						Web development can be a fun hobby. I love doing my web development in Angular because 1) it's an actual framework, and 2) I don't have to worry (too much) about designing myself into a corner!
+					</p>
+				</mat-card-content>
+				<mat-card-actions>
+				<a mat-raised-button color="accent" href="https://github.com/jaearl/jared-website" target="_blank">GITHUB</a>
+				</mat-card-actions>
+			</mat-card>
+		</div>
 		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-header>
@@ -44,19 +63,19 @@
 		<div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="50%">
 			<mat-card class="mat-elevation-z4">
 				<mat-card-header>
-				<img mat-card-avatar src="assets/angular-icon.png" style="background-size: cover;">
-				<mat-card-title>This Website!</mat-card-title>
-    			<mat-card-subtitle>Personal website using the Angular framework, and hosted on a Raspberry Pi 3</mat-card-subtitle>
+				<img mat-card-avatar src="assets/python-icon.png" style="background-size: cover;">
+				<mat-card-title>OGame API</mat-card-title>
+    			<mat-card-subtitle>A web browser game hacking prototype</mat-card-subtitle>
     			</mat-card-header>
-				<img mat-card-img src="assets/raspberrypi3.jpeg">
+				<img mat-card-img src="assets/ogame.jpeg">
 				<mat-card-content>
 					<p class="description-text">
 						<br>
-						Web development can be a fun hobby. I love doing my web development in Angular because 1) it's an actual framework, and 2) I don't have to worry (too much) about designing myself into a corner!
+						I had a lot of fun hacking a web browser game called OGame, and interfacing a small expert system to the API I wrote for it (I never actually played the game using the bot ;)). I learned a lot about how websites work, how Javascript is rendered, graph algorithms, and the Python programming language. I also learned some lessons about program stability. With how often the website changes, the API was always unstable (and undoubtedly no longer works), but the instability is encapsulated in the OGameAPI interface; so if the API is updated, one can go on developing the bot as if nothing has changed.
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
-				<a mat-raised-button color="accent" href="https://github.com/jaearl/jared-website" target="_blank">GITHUB</a>
+				<a mat-raised-button color="accent" href="https://github.com/jaearl/Zombie_Apocalypse" target="_blank">GITHUB</a>
 				</mat-card-actions>
 			</mat-card>
 		</div>
