--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,28 +7,28 @@
 	<span class="toolbar-spacer"></span>
 	<span class="main-font" style="text-align: center;">Brought to you on a tasty slice of Raspberry Pi</span>
 	<span class="toolbar-spacer"></span>
-	<button mat-flat-button (click)="scroll(projects)" class="main-font" color="primary">Projects</button>
 	<button mat-flat-button (click)="scroll(roles)" class="main-font" color="primary">Roles</button>
+	<button mat-flat-button (click)="scroll(projects)" class="main-font" color="primary">Projects</button>
 	<span class="extra-pad"></span>
 	</mat-toolbar>
 </div>
 
-<div class="mat-app-background parallax-background" id="first-parallax"></div>
+<div class="mat-app-background parallax-background" id="me-parallax"></div>
 
 <div class="mat-app-background">
 	<app-small-bio></app-small-bio>
 </div>
 
-<div class="mat-app-background parallax-background" id="second-parallax"></div>
-
-<div #projects class="mat-app-background">
-	<app-projects></app-projects>
-</div>
-
-<div class="mat-app-background parallax-background" id="third-parallax"></div>
+<div class="mat-app-background parallax-background" id="professional-parallax"></div>
 
 <div #roles class="mat-app-background">
 	<app-roles></app-roles>
+</div>
+
+<div class="mat-app-background parallax-background" id="fun-things-parallax"></div>
+
+<div #projects class="mat-app-background">
+	<app-projects></app-projects>
 </div>
 
 <div class="mat-app-background">
