small wording change

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -71,7 +71,7 @@
 				<mat-card-content>
 					<p class="description-text">
 						<br>
-						I had a lot of fun hacking a web browser game called OGame, and interfacing a small expert system to the API I wrote for it (I never actually played the game using the bot ;)). I learned a lot about how websites work, how Javascript is rendered, graph algorithms, and the Python programming language. I also learned some lessons about program stability. With how often the website changes, the API was always unstable (and undoubtedly no longer works), but the instability is encapsulated in the OGameAPI interface; so if the API is updated, one can go on developing the bot as if nothing has changed.
+						I had a lot of fun hacking a web browser game called OGame, and interfacing a small expert system to the API I wrote for it (I never actually played the game using the bot ;)). I learned a lot about how websites work, how Javascript is parsed, graph algorithms, and the Python programming language. I also learned some lessons about program stability. With how often the website changes, the API was always unstable (and undoubtedly no longer works), but the instability is encapsulated in the OGameAPI interface; so if the API is updated, one can go on developing the bot as if nothing has changed.
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
