Add button for new publication link, update sbol canvas description

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -12,12 +12,13 @@
 				<mat-card-content>
 					<br>
 					<p class="description-text">
-						With guidance from Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built the worlds first open source, web-based, synthetic biology CAD program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. SBOL Canvas was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA) in 2020, and is expected to be published in the high-impact journal, ACS Synthetic Biology, in 2021.
+						With guidance from Stanford educated Professor Chris Myers, my undergraduate capstone team comprised of Logan Terry, Sam Thayer, and myself built the worlds first open source, web-based, synthetic biology CAD program. Still under active development, SBOL Canvas is being used across the globe to aid in the design and sharing of novel constructs. SBOL Canvas was featured at the Twelfth International Workshop on Bio-Design Automation (IWBDA) in 2020, and was published in the high-impact journal, ACS Synthetic Biology (ACSSB), in 2021.
 					</p>
 				</mat-card-content>
 				<mat-card-actions>
 				<a mat-raised-button color="accent" href="https://sbolcanvas.org" target="_blank">APP</a>
 				<a mat-raised-button color="accent" href="https://www.iwbdaconf.org/2020/" target="_blank">IWBDA</a>
+				<a mat-raised-button color="accent" href="https://pubs.acs.org/doi/10.1021/acssynbio.1c00096" target="_blank">ACSSB</a>
 				<a mat-raised-button color="accent" href="https://github.com/SynBioDex/SBOLCanvas" target="_blank">GITHUB</a>
 				</mat-card-actions>
 			</mat-card>
