remove toolbar pi comment

--- a/src/app/roles/roles.component.html
+++ b/src/app/roles/roles.component.html
@@ -6,7 +6,7 @@
 				<mat-card-content>
 					<h2 class="main-font" style="text-align: center">Software Engineer &middot; 2019 - Present</h2>
 					<h3 class="main-font" style="text-align: center">Global Governments</h3>
-					<h4 class="main-font" style="text-align: center">Linux Endpoint Engineering (c/c++) &middot; Cross Platform &middot; Linux Driver Maintenance</h4>
+					<h4 class="main-font" style="text-align: center">Linux Endpoint Engineering &middot; Cross Platform</h4>
 					<p></p>
 				</mat-card-content>
 			</mat-card>
