--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,8 @@
 	<span class="title-pad"></span>
 	<span class="main-font">Jared Earl</span>
 	<span class="toolbar-spacer"></span>
-	<span class="main-font" style="text-align: center;">Brought to you on a tasty slice of Raspberry Pi</span>
-	<span class="toolbar-spacer"></span>
+	<!-- <span class="main-font" style="text-align: center;">Brought to you on a tasty slice of Raspberry Pi</span>
+	<span class="toolbar-spacer"></span> -->
 	<button mat-flat-button (click)="scroll(roles)" class="main-font" color="primary">Roles</button>
 	<button mat-flat-button (click)="scroll(projects)" class="main-font" color="primary">Projects</button>
 	<span class="extra-pad"></span>
