--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -28,15 +28,9 @@
 				<mat-card-header>
 				<img mat-card-avatar src="assets/angular-icon.png" style="background-size: cover;">
 				<mat-card-title>This Website!</mat-card-title>
-    			<mat-card-subtitle>Personal website using the Angular framework, and hosted on a Raspberry Pi 3</mat-card-subtitle>
+    			<mat-card-subtitle>Personal website using the Angular framework</mat-card-subtitle>
     			</mat-card-header>
 				<img mat-card-img src="assets/raspberrypi3.jpeg">
-				<mat-card-content>
-					<p class="description-text">
-						<br>
-						Web development can be a fun hobby. I love doing my web development in Angular because 1) it's an actual framework, and 2) I don't have to worry (too much) about designing myself into a corner!
-					</p>
-				</mat-card-content>
 				<mat-card-actions>
 				<a mat-raised-button color="accent" href="https://github.com/jaearl/jared-website" target="_blank">GITHUB</a>
 				</mat-card-actions>
